[gd_scene format=3 uid="uid://d3xksmwdntvb5"]

[ext_resource type="Script" uid="uid://c5dwsndf37m8y" path="res://Code/Player/player.gd" id="1_kpjcp"]
[ext_resource type="Texture2D" uid="uid://bgmvy7b8bs1qu" path="res://Assets/characters/spider_walk1.png" id="2_wi0c6"]
[ext_resource type="Texture2D" uid="uid://14825pghujjh" path="res://Assets/characters/spider_walk2.png" id="3_hp6x6"]
[ext_resource type="Texture2D" uid="uid://f8dx5il5bksg" path="res://Assets/images/White_Background.png" id="3_kne1u"]
[ext_resource type="Texture2D" uid="uid://curj68jyajc8g" path="res://Assets/characters/snake_walk1.png" id="4_hp6x6"]
[ext_resource type="Texture2D" uid="uid://budgsvi0c0ad2" path="res://Assets/characters/snake_walk2.png" id="5_3tkgg"]
[ext_resource type="Texture2D" uid="uid://t7gyswu4nkcd" path="res://Assets/characters/snake_jump.png" id="6_wi0c6"]
[ext_resource type="Texture2D" uid="uid://t625bqag2qjv" path="res://Assets/characters/Burb1.png" id="7_d6rpx"]
[ext_resource type="Texture2D" uid="uid://deaeruh4mjhnv" path="res://Assets/characters/jellyfish.png" id="8_3tkgg"]
[ext_resource type="Texture2D" uid="uid://ciftgyn7ymq4i" path="res://Assets/characters/Burb2.png" id="8_r3kul"]
[ext_resource type="Texture2D" uid="uid://v0mtjtt5i7j" path="res://Assets/characters/Burb3.png" id="9_jatw7"]
[ext_resource type="Texture2D" uid="uid://chftut0d4d00g" path="res://Assets/characters/snake_punch1.png" id="9_l6ohk"]
[ext_resource type="Texture2D" uid="uid://18ymrkq8faeq" path="res://Assets/characters/StandingBurb1.png" id="10_jatw7"]
[ext_resource type="Texture2D" uid="uid://cqs3f867cyst4" path="res://Assets/characters/snake_punch2.png" id="10_oudfo"]
[ext_resource type="Texture2D" uid="uid://bkq685n417r4q" path="res://Assets/characters/snake_punch3.png" id="11_d6rpx"]
[ext_resource type="Texture2D" uid="uid://cfo0dgnpn8bwu" path="res://Assets/characters/StandingBurb2.png" id="11_rv870"]
[ext_resource type="Script" uid="uid://d0pcdb78t5mfm" path="res://Code/Player/HealthBar.gd" id="17_efikj"]
[ext_resource type="Texture2D" uid="uid://qnh63xepov4y" path="res://Assets/images/heart_full.png" id="17_rv870"]
[ext_resource type="Texture2D" uid="uid://vtvkgeqx57pc" path="res://Assets/images/heart_empty.png" id="19_itxgx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_l6ohk"]
radius = 27.5
height = 55.0

[sub_resource type="SpriteFrames" id="SpriteFrames_r3kul"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_hp6x6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_cxr5p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wi0c6")
}, {
"duration": 1.0,
"texture": ExtResource("3_hp6x6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_5ncpa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hp6x6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_jatw7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_hp6x6")
}, {
"duration": 1.0,
"texture": ExtResource("5_3tkgg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_l6ohk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_wi0c6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_oudfo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_d6rpx")
}, {
"duration": 1.0,
"texture": ExtResource("8_r3kul")
}, {
"duration": 1.0,
"texture": ExtResource("9_jatw7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_efikj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_jatw7")
}, {
"duration": 1.0,
"texture": ExtResource("11_rv870")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_d6rpx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_3tkgg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rv870"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_l6ohk")
}, {
"duration": 1.0,
"texture": ExtResource("10_oudfo")
}, {
"duration": 1.0,
"texture": ExtResource("11_d6rpx")
}, {
"duration": 1.0,
"texture": ExtResource("10_oudfo")
}, {
"duration": 1.0,
"texture": ExtResource("9_l6ohk")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wi0c6"]
size = Vector2(0.13426769, 0.024748262)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhfnw"]
size = Vector2(117.5, 109)

[sub_resource type="Animation" id="Animation_tdg3f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_dtqjt"]
resource_name = "invincibility"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.099999994, 0.19999999, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ncpa"]
_data = {
&"RESET": SubResource("Animation_tdg3f"),
&"invincibility": SubResource("Animation_dtqjt")
}

[node name="Player" type="CharacterBody2D" unique_id=1625906938]
script = ExtResource("1_kpjcp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1168795556]
shape = SubResource("CapsuleShape2D_l6ohk")

[node name="Animations" type="Node2D" parent="." unique_id=1922716337]

[node name="SpiderStanding" type="AnimatedSprite2D" parent="Animations" unique_id=2006195252]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_r3kul")

[node name="SpiderWalking" type="AnimatedSprite2D" parent="Animations" unique_id=9786302]
unique_name_in_owner = true
sprite_frames = SubResource("SpriteFrames_cxr5p")
frame_progress = 0.91274816

[node name="SnakeStanding" type="AnimatedSprite2D" parent="Animations" unique_id=2077674135]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_5ncpa")

[node name="SnakeWalking" type="AnimatedSprite2D" parent="Animations" unique_id=1041142884]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_jatw7")

[node name="SnakeJumping" type="AnimatedSprite2D" parent="Animations" unique_id=105448691]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_l6ohk")
frame_progress = 0.92885756

[node name="BirdFlying" type="AnimatedSprite2D" parent="Animations" unique_id=1179513440]
unique_name_in_owner = true
visible = false
position = Vector2(-8, 0)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_oudfo")
autoplay = "default"

[node name="BirdStanding" type="AnimatedSprite2D" parent="Animations" unique_id=937735380]
unique_name_in_owner = true
visible = false
position = Vector2(0, -5)
scale = Vector2(0.7, 0.7)
sprite_frames = SubResource("SpriteFrames_efikj")
autoplay = "default"

[node name="JellyfishSwimming" type="AnimatedSprite2D" parent="Animations" unique_id=1251940073]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_d6rpx")

[node name="SnakePunching" type="AnimatedSprite2D" parent="Animations" unique_id=72864384]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_rv870")

[node name="Raycasts" type="Node2D" parent="." unique_id=1428850002]

[node name="SpiderWallLeft" type="RayCast2D" parent="Raycasts" unique_id=1946089268]
unique_name_in_owner = true
position = Vector2(-4, 0)
target_position = Vector2(-39, 0)
collision_mask = 8

[node name="SpiderWallRight" type="RayCast2D" parent="Raycasts" unique_id=2052355990]
unique_name_in_owner = true
position = Vector2(1, 1)
target_position = Vector2(48, -1)
collision_mask = 8

[node name="SpiderCeiling" type="Area2D" parent="Raycasts" unique_id=456458722]
unique_name_in_owner = true
position = Vector2(0.9999962, 0)
scale = Vector2(-667.26263, 1156.6473)
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Raycasts/SpiderCeiling" unique_id=460038400]
position = Vector2(0.0014986516, -0.031718828)
scale = Vector2(1.004556, 1)
shape = SubResource("RectangleShape2D_wi0c6")

[node name="ThePunchZone" type="Area2D" parent="." unique_id=197552567]
position = Vector2(48, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThePunchZone" unique_id=140186958]
visible = false
shape = SubResource("RectangleShape2D_xhfnw")

[node name="Sprite2D" type="Sprite2D" parent="ThePunchZone" unique_id=41963774]
visible = false
self_modulate = Color(0.3732504, 0.090004705, 0.14010507, 1)
scale = Vector2(0.03, 0.03)
texture = ExtResource("3_kne1u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=143440026]
libraries/ = SubResource("AnimationLibrary_5ncpa")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1290484480]
layer = 2

[node name="PlayerHealthBar" type="Control" parent="CanvasLayer" unique_id=1349906203]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = 33.0
offset_top = 26.0
offset_right = 833.0
offset_bottom = 126.0
scale = Vector2(0.75, 0.75)
script = ExtResource("17_efikj")

[node name="TemplateFull" type="TextureRect" parent="CanvasLayer/PlayerHealthBar" unique_id=1850568632]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("17_rv870")

[node name="TemplateEmpty" type="TextureRect" parent="CanvasLayer/PlayerHealthBar" unique_id=1266483741]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("19_itxgx")

[node name="HealthContainer" type="HBoxContainer" parent="CanvasLayer/PlayerHealthBar" unique_id=1359897449]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 0

[node name="Camera2D" type="Camera2D" parent="." unique_id=2144803868]

[node name="CastUp" type="RayCast2D" parent="." unique_id=927265114]
unique_name_in_owner = true
rotation = -3.1415927
target_position = Vector2(0, 500)
collision_mask = 4

[node name="CastDown" type="RayCast2D" parent="." unique_id=184122281]
unique_name_in_owner = true
target_position = Vector2(0, 500)
collision_mask = 4

[node name="CastLeft" type="RayCast2D" parent="." unique_id=1075010257]
unique_name_in_owner = true
rotation = 1.5707964
target_position = Vector2(0, 500)
collision_mask = 4

[node name="CastRight" type="RayCast2D" parent="." unique_id=870726006]
unique_name_in_owner = true
rotation = -1.5707964
target_position = Vector2(0, 500)
collision_mask = 4

[connection signal="animation_finished" from="Animations/SnakePunching" to="." method="_on_snake_punching_animation_finished"]
[connection signal="frame_changed" from="Animations/SnakePunching" to="." method="_on_snake_punching_frame_changed"]
